# simglib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/cudeconv/: CMakeLists.txt  spitfire2d.cu  spitfire2d.h  spitfire3d.cu  spitfire3d.h  srichardsonlucy.cu  srichardsonlucy.h  swiener.cu  swiener.h
src/cudenoise/: CMakeLists.txt  spitfire2d.cu  spitfire2d.h  spitfire3d.cu  spitfire3d.h  spitfire4d.cu  spitfire4d.h
src/cugrad/: CMakeLists.txt  cufft2d.cu  cufft2d.h  cugrad.cu  cugrad.h
src/scli/: CMakeLists.txt  SCliException.h  SCliParameter.cpp  SCliParameter.h  SCliParameterList.cpp  SCliParameterList.h  SCliParser.cpp  SCliParser.h  SCliSelect.cpp  SCliSelect.h  SCliStringOp.cpp  SCliStringOp.h  SCliTimer.cpp  SCliTimer.h  SCliUtils.cpp  SCliUtils.h  SObserverConsole.h  STimer.cpp  STimer.h
src/score/: CMakeLists.txt  SColor.cpp  SColor.h  SCoreShortcuts.cpp  SCoreShortcuts.h  SException.h  SFile.cpp  SFile.h  SMath.h  SObservable.h  SObserver.h  SObserverConsole.h  SPath.cpp  SPath.h  SProcess.cpp  SProcess.h  SRandomGeneratorPM.cpp  SRandomGeneratorPM.h  SRandomGeneratorPMS.cpp  SRandomGeneratorPMS.h  SSingleton.h  SStringOp.cpp  SStringOp.h
src/sdata/: CMakeLists.txt  SArray.cpp  SArray.h  SBool.cpp  SBool.h  SData.cpp  SData.h  SDataCast.cpp  SDataCast.h  SDataException.h  SDatatypes.cpp  SDatatypes.h  SFloat.cpp  SFloat.h  SInt.cpp  SInt.h  SObject.cpp  SObject.h  SString.cpp  SString.h  STable.cpp  STable.h
src/sdataio/: CMakeLists.txt  SCSV.cpp  SCSV.h  SJSON.cpp  SJSON.h
src/sdeconv/: CMakeLists.txt  sgaussianpsf.cpp  spitfire2d.cpp  spitfire2d.h  spitfire3d.cpp  spitfire3d.h  srichardsonlucy.cpp  srichardsonlucy.h  sutils.cpp  sutils.h  swiener.cpp  swiener.h
src/sdenoise/: CMakeLists.txt  spitfire2d.cpp  spitfire2d.h  spitfire3d.cpp  spitfire3d.h  spitfire4d.cpp  spitfire4d.h
src/sfft/: CMakeLists.txt  SFFT.cpp  SFFT.h  SFFTConvolutionFilter.cpp  SFFTConvolutionFilter.h
src/sfiltering/: CMakeLists.txt  SConvolve.cpp  SConvolve.h  SGaussianFilter.cpp  SGaussianFilter.h  SGradient.cpp  SGradient.h  SGradientFilter.cpp  SGradientFilter.h  SMeanFilter.cpp  SMeanFilter.h  SMedianFilter.cpp  SMedianFilter.h  SMinMaxFilter.cpp  SMinMaxFilter.h  SVarianceFilter.cpp  SVarianceFilter.h
src/simage/: CMakeLists.txt  SHistogram.cpp  SHistogram.h  SImage.cpp  SImage.h  SImageCast.cpp  SImageCast.h  SImageColor.cpp  SImageColor.h  SImageDimension.cpp  SImageDimension.h  SImageFilter.cpp  SImageFilter.h  SImageFloat.cpp  SImageFloat.h  SImageInt.cpp  SImageInt.h  SImageMath.cpp  SImageMath.h  SImageProcess.cpp  SImageProcess.h  SImageStats.cpp  SImageStats.h  SImageUInt.cpp  SImageUInt.h
src/simageio/: CMakeLists.txt  SImIO.cpp  SImIO.h  SImageIO.cpp  SImageIO.h  SImageIOException.h  SImageReader.cpp  SImageReader.h  SPngIO.cpp  SPngIO.h  STiffIO.cpp  STiffIO.h  STxtIO.cpp  STxtIO.h
src/smanipulate/: CMakeLists.txt  SCrop.cpp  SCrop.h  SDuplicate.cpp  SDuplicate.h  SInvert.cpp  SInvert.h  SNormalize.cpp  SNormalize.h  SResizeCanvas.cpp  SResizeCanvas.h  SShift.cpp  SShift.h  SStandardize.cpp  SStandardize.h  STProject.cpp  STProject.h  SZProject.cpp  SZProject.h
src/smeasuring/: CMakeLists.txt  SRoiInfo.cpp  SRoiInfo.h
src/soperate/: CMakeLists.txt  SApplyMask.cpp  SApplyMask.h  SImageCalculator.cpp  SImageCalculator.h  SMaskCalculator.cpp  SMaskCalculator.h
src/spadding/: CMakeLists.txt  spadding.cpp  spadding.h
src/sroi/: CMakeLists.txt  SPoint.cpp  SPoint.h  SRoi.cpp  SRoi.h  SRoiDrawer.cpp  SRoiDrawer.h  SRoiPatch.cpp  SRoiPatch.h  SRoiReader.cpp  SRoiReader.h  SRoiShortcuts.cpp  SRoiShortcuts.h  SRoiTypes.cpp  SRoiTypes.h
src/sshape/: CMakeLists.txt  SLine.cpp  SLine.h  SShape.cpp  SShape.h
tests/: CMakeLists.txt
tests/cudeconv/: CMakeLists.txt  TestCuRichardsonLucy.cpp  TestCuRichardsonLucy2d.cpp  TestCuRichardsonLucy3d.cpp  TestCuWiener2d.cpp  TestCuWiener3d.cpp  TestSpitfireCuDeconv2dHV.cpp  TestSpitfireCuDeconv2dSV.cpp  TestSpitfireCuDeconv3dHV.cpp  TestSpitfireCuDeconv3dSV.cpp  cudeconvTestConfig.h.in
tests/cudenoise/: CMakeLists.txt  TestSpitfireCuDenoise2dHV.cpp  TestSpitfireCuDenoise2dSV.cpp  TestSpitfireCuDenoise3dHV.cpp  TestSpitfireCuDenoise3dSV.cpp  TestSpitfireCuDenoise4dHV.cpp  TestSpitfireCuDenoise4dSV.cpp  cudenoiseTestConfig.h.in
tests/dataset/: Cell02_HELA_SD_Tubtracker_CY5_15p_M6PR_15p_GFP_15p_20ms_50tp_w14-Spinning1-CY5.txt  celegans_denoised.tif
tests/scli/: CMakeLists.txt  TestCmd.cpp
tests/score/: CMakeLists.txt  TestCore.cpp
tests/sdata/: CMakeLists.txt  TestSData.cpp
tests/sdeconv/: CMakeLists.txt  TestRichardsonLucy2d.cpp  TestRichardsonLucy3d.cpp  TestSpitfireDeconv2dHV.cpp  TestSpitfireDeconv2dSV.cpp  TestSpitfireDeconv3dHV.cpp  TestSpitfireDeconv3dSV.cpp  TestWiener2d.cpp  TestWiener3d.cpp  sdeconvTestConfig.h.in
tests/sdenoise/: CMakeLists.txt  TestSpitfire2dHV.cpp  TestSpitfire3dHV.cpp  TestSpitfire4dHV.cpp  TestSpitfireDenoise2dHV.cpp  TestSpitfireDenoise2dSV.cpp  TestSpitfireDenoise3dHV.cpp  TestSpitfireDenoise3dSV.cpp  TestSpitfireDenoise4dSV.cpp  sdenoiseTestConfig.h.in
tests/simage/: CMakeLists.txt  TestSImage.cpp
tools/: CMakeLists.txt
tools/cudeconv/: CMakeLists.txt  spitfire2d.cpp  spitfire3d.cpp
tools/cudenoise/: CMakeLists.txt  cuspitfire2ddenoise.cpp  cuspitfire3ddenoise.cpp  cuspitfire4ddenoise.cpp
tools/cugrad/: CMakeLists.txt  cuconv.cpp  cufft2d.cpp  cugrad.cpp
tools/scli/: CMakeLists.txt  demo.cpp
tools/sdeconv/: CMakeLists.txt  gaussian2dpsf.cpp  gaussian3dpsf.cpp  richardsonlucy2d.cpp  richardsonlucy2dslice.cpp  richardsonlucy3d.cpp  sgibsonlannipsf.cpp  spitfire2d.cpp  spitfire2d_estimate.cpp  spitfire2dplan.cpp  spitfire2dslice.cpp  spitfire3d.cpp  wiener2d.cpp  wiener2dslice.cpp  wiener3d.cpp  wienerairyscan2d.cpp
tools/sdenoise/: CMakeLists.txt  spitfire2d.cpp  spitfire3d.cpp  spitfire4d.cpp
tools/sfiltering/: CMakeLists.txt  median2d.cpp  median3d.cpp  median4d.cpp
tools/smanipulate/: CMakeLists.txt  crop.cpp
tools/spadding/: CMakeLists.txt  hannzeropadding2d.cpp  hannzeropadding3d.cpp  mirrorpadding3d.cpp  normalizez.cpp  (+4 more)
(+45 files in other folders)
