############################################################
#
#
# Copyright (c) SImg 2020
#
# AUTHOR:
# Sylvain Prigent (sylvain.prigent@inria.fr)
# 
## ###############################################################

enable_testing()

add_subdirectory(scli)
add_subdirectory(score)
add_subdirectory(sdata)
add_subdirectory(sdenoise)
add_subdirectory(simage)