############################################################
#
# $Id$
#
# Copyright (c) simglib 2020
#
# AUTHOR:
# Sylvain Prigent
# 

## #################################################################
## Add subdirectory
## #################################################################
add_subdirectory( scli )
add_subdirectory( sdeconv )
add_subdirectory( smanipulate )
add_subdirectory( spadding )
add_subdirectory( sroi )
add_subdirectory( sshape )
